Second commit, UI fully updated just need to add references and comments

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -36,7 +36,7 @@
 
                 <input type="number" required name="launchPrice" id="" /><br />
                 <br />
-                <button>Add Game</button>
+                <button id="saveBtn">Add Game</button>
                 <%- include ("./partials/footer.ejs") %>
               </form>
             </div>
