--- a/views/country.ejs
+++ b/views/country.ejs
@@ -6,7 +6,7 @@
     <%- include ("./partials/nav.ejs") %>
     <div class="card w-25 mx-auto">
       <div class="card-body text-center">
-        <h4>Games made per different countries</h4>
+        <h6 class="titleChart">Games made per different countries</h4>
         <canvas id="myChart"></canvas>
         <%- include ("./partials/footer.ejs") %>
       </div>
