--- a/views/launchprice.ejs
+++ b/views/launchprice.ejs
@@ -6,7 +6,7 @@
     <%- include ("./partials/nav.ejs") %>
     <div class="card w-75 mx-auto">
       <div class="card-body text-center">
-        <h1>Amount of Games per price range</h1>
+        <h1 class="titleChart">Amount of Games per price range</h1>
         <canvas id="myChart"></canvas>
         <%- include ("./partials/footer.ejs") %>
       </div>
