--- a/public/styles.css
+++ b/public/styles.css
@@ -1,10 +1,44 @@
 body {
-  background-color: rgb(173, 228, 248) !important;
+  background-color: #dbeaff !important;
 }
 
-a {
+.mainLbl {
+  font-size: 20px;
+}
+.mainGame {
   text-decoration: none !important;
-  color: white important;
+  color: white;
+  letter-spacing: 3px;
+  text-shadow: -2px -2px 0 black, 2px -2px 0 black, -2px 2px 0 black,
+    2px 2px 0 black, 0px -3px 0 black, 3px 0px 0 black, 0px 3px 0 black,
+    -3px 0px 0 black;
+  font-family: "Copperplate Gothic Bold", "Copperplate Gothic", Copperplate,
+    fantasy;
+}
+.editTitle {
+  font-size: 40px;
+  color: lightseagreen;
+  letter-spacing: 3px;
+  text-shadow: -2px -2px 0 black, 2px -2px 0 black, -2px 2px 0 black,
+    2px 2px 0 black, 0px -3px 0 black, 3px 0px 0 black, 0px 3px 0 black,
+    -3px 0px 0 black;
+  font-family: "Copperplate Gothic Bold", "Copperplate Gothic", Copperplate,
+    fantasy;
+}
+
+.edit {
+  font-size: 20px;
+  color: white;
+  letter-spacing: 3px;
+  text-shadow: -2px -2px 0 black, 2px -2px 0 black, -2px 2px 0 black,
+    2px 2px 0 black, 0px -3px 0 black, 3px 0px 0 black, 0px 3px 0 black,
+    -3px 0px 0 black;
+  font-family: "Copperplate Gothic Bold", "Copperplate Gothic", Copperplate,
+    fantasy;
+}
+
+.mainGame:hover {
+  color: lightseagreen;
 }
 
 .card {
@@ -13,33 +47,96 @@ a {
 
 .nav {
   background-color: white;
-  border-bottom: 8px !important;
+  border-bottom: 3px solid #cdd7d9;
+  backdrop-filter: blur(4px);
 }
 
 .nav .nav-link {
   color: black !important;
 }
 
-.title {
-  background-color: brown;
+.titleChart {
+  background-color: #167f7a;
   padding-left: 100px;
   padding-bottom: 20px;
   padding-top: 20px;
   padding-right: 100px;
   color: white;
   font-weight: bolder;
-  font-size: 50px;
-  font-style: bold;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 30px;
+  font-family: "Copperplate Gothic Bold", "Copperplate Gothic", Copperplate,
+    fantasy;
+  text-shadow: -2px -2px 0 black, 2px -2px 0 black, -2px 2px 0 black,
+    2px 2px 0 black;
+}
+.title {
+  background-color: #167f7a;
+  padding-left: 100px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  padding-right: 100px;
+  color: white;
+  font-weight: bolder;
+  font-size: 40px;
+  font-family: "Copperplate Gothic Bold", "Copperplate Gothic", Copperplate,
+    fantasy;
+  text-shadow: -2px -2px 0 black, 2px -2px 0 black, -2px 2px 0 black,
+    2px 2px 0 black;
 }
 
 .addLbl {
-  font-weight: bolder;
-  font-size: 20px;
-  font-style: bold;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: white;
+  font-weight: 1000;
+  letter-spacing: 3px;
+  font-size: 25px;
+  font-family: "Copperplate Gothic Bold", "Copperplate Gothic", Copperplate,
+    fantasy;
+  text-shadow: -2px -2px 0 black, 2px -2px 0 black, -2px 2px 0 black,
+    2px 2px 0 black;
 }
 
 .nav .nav-link:hover {
   color: lightseagreen !important;
+}
+
+#editBtn {
+  border: 4px outset #cdd7d9;
+  border-color: #cdd7d9;
+  padding: 10px;
+  background-color: #20b2aa;
+  color: white;
+  letter-spacing: 3px;
+  text-shadow: -2px -2px 0 black, 2px -2px 0 black, -2px 2px 0 black,
+    2px 2px 0 black, 0px -3px 0 black, 3px 0px 0 black, 0px 3px 0 black,
+    -3px 0px 0 black;
+  font-family: "Copperplate Gothic Bold", "Copperplate Gothic", Copperplate,
+    fantasy;
+}
+
+#deleteBtn {
+  border: 4px outset #cdd7d9;
+  border-color: #cdd7d9;
+  padding: 10px;
+  background-color: #8c2f2f;
+  color: white;
+  letter-spacing: 3px;
+  text-shadow: -2px -2px 0 black, 2px -2px 0 black, -2px 2px 0 black,
+    2px 2px 0 black, 0px -3px 0 black, 3px 0px 0 black, 0px 3px 0 black,
+    -3px 0px 0 black;
+  font-family: "Copperplate Gothic Bold", "Copperplate Gothic", Copperplate,
+    fantasy;
+}
+
+#saveBtn {
+  border: 4px outset #cdd7d9;
+  border-color: #cdd7d9;
+  padding: 10px;
+  background-color: #20b2aa;
+  color: white;
+  letter-spacing: 3px;
+  text-shadow: -2px -2px 0 black, 2px -2px 0 black, -2px 2px 0 black,
+    2px 2px 0 black, 0px -3px 0 black, 3px 0px 0 black, 0px 3px 0 black,
+    -3px 0px 0 black;
+  font-family: "Copperplate Gothic Bold", "Copperplate Gothic", Copperplate,
+    fantasy;
 }
