--- a/views/studio.ejs
+++ b/views/studio.ejs
@@ -6,7 +6,7 @@
     <%- include ("./partials/nav.ejs") %>
     <div class="card w-25 mx-auto">
       <div class="card-body text-center">
-        <h1>Games by Studio</h1>
+        <h1 class="titleChart">Games by Studio</h1>
         <canvas id="myChart"></canvas>
         <%- include ("./partials/footer.ejs") %>
       </div>
