--- a/views/country.ejs
+++ b/views/country.ejs
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!--Include the head-->
   <%- include ("./partials/head.ejs") %>
 
   <body>
+      <!--Include the nav-->
     <%- include ("./partials/nav.ejs") %>
     <div class="card w-25 mx-auto">
       <div class="card-body text-center">
         <h6 class="titleChart">Games made per different countries</h4>
+            <!--canvas tag for chart .js-->
         <canvas id="myChart"></canvas>
+          <!--Include the footer-->
         <%- include ("./partials/footer.ejs") %>
       </div>
     </div>
     <script>
+      //fetch method using the app.get that returns all the data as JSON 
       fetch("/games")
         .then((res) => res.json())
         .then((games) => {
+          //using these arrays to display the data, one for the countries and one for how many times a country shows up
           const countries = [];
           const counts = [];
 
@@ -22,7 +28,7 @@
             const countryName = g.country;
             let found = false;
 
-            // check if genre already exists
+            // check if country already exists
             for (let i = 0; i < countries.length; i++) {
               if (countries[i] === countryName) {
                 counts[i]++;
@@ -37,7 +43,7 @@
               counts.push(1);
             }
           });
-
+//this is to create a chart to display the data
           new Chart(myChart, {
             type: "radar",
             data: {
@@ -46,8 +52,10 @@
             },
             options: {
               scales: {
+                //because it is a circular chart there is no x,y it is instead r
                 r: {
                   beginAtZero: true,
+                  //this is to make the step size go up by 1 whole number, before it was going in decinals
                   ticks: {
                     display: true,
                     stepSize: 1,
