--- a/views/genre.ejs
+++ b/views/genre.ejs
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!--Include the head-->
+
   <%- include ("./partials/head.ejs") %>
 
   <body>
+    <!--Include the nav-->
     <%- include ("./partials/nav.ejs") %>
     <div class="card w-25 mx-auto">
       <div class="card-body text-center">
         <h1 class="titleChart">Games by Genre</h1>
+        <!--canvas tag for chart .js-->
         <canvas id="myChart"></canvas>
+        <!--Include the footer-->
         <%- include ("./partials/footer.ejs") %>
       </div>
     </div>
     <script>
+      //fetch method using the app.get that returns all the data as JSON
       fetch("/games")
         .then((res) => res.json())
         .then((games) => {
+          //using these arrays to display the data, one for the genre and one for how many times it shows up
           const genres = [];
           const counts = [];
 
@@ -37,6 +44,7 @@
               counts.push(1);
             }
           });
+          //this is to create a chart to display the data
 
           new Chart(myChart, {
             type: "pie",
@@ -49,6 +57,8 @@
                 y: {
                   beginAtZero: true,
                   ticks: {
+                    //this is to make the step size go up by 1 whole number, before it was going in decinals
+
                     stepSize: 1,
                   },
                 },
