--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,6 +1,8 @@
+<!--404 page incase they enter wrong route-->
 <!DOCTYPE html>
 <html lang="en">
   <body>
+    <h1>404</h1>
     <h3>Ooops, content not found...</h3>
   </body>
 </html>
