--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!--Include the head-->
   <%- include ("./partials/head.ejs") %>
-
   <body>
+    <!--Include the nav-->
     <%- include ("./partials/nav.ejs") %>
     <div class="container">
       <div class="row">
@@ -14,6 +15,7 @@
             <div class="card-body mx-auto">
               <h1 class="title">Welcome to my GameLibrary App website!</h1>
               <h3 class="title">My Games added so far...</h3>
+              <!--This is to display each game in the database, reference @eugene slides-->
               <% if (games.length) { games.forEach(game=> { %>
               <a class="mainGame" href="/<%=game._id %>">
                 <h2><%= game.title%></h2>
@@ -24,6 +26,8 @@
                 <p class="mainLbl">Launch Price: €<%= game.launchPrice%></p>
               </a>
               <hr />
+              <!--If there is no games, this will be the message displayed-->
+
               <% }); }else {%>
               <p>Sorry, there are no games yet..</p>
             </div>
@@ -31,6 +35,7 @@
         </div>
       </div>
     </div>
+    <!--Include the footer-->
     <% }%> <%- include ("./partials/footer.ejs") %>
   </body>
 </html>
