--- a/views/game.ejs
+++ b/views/game.ejs
@@ -98,6 +98,7 @@
     </div>
 
     <script>
+      //REFERENCE @EUGENE
       //This is the logic behind the buttons
       const deleteBtnElement = document.getElementById("deleteBtn");
       const viewGameDivElement = document.getElementById("viewGame");
