Final update, added correct commenting and references to each file.

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -1,3 +1,11 @@
+<!--
+ *  add.ejs
+ *   
+ *  Date: 11/12/2025 
+ *
+ * @author Martin Olaru, x24528929
+ *@reference https://moodle2025.ncirl.ie/course/section.php?id=36540
+-->
 <!DOCTYPE html>
 <html lang="en">
   <!--Include the head-->
@@ -98,7 +106,7 @@
     </div>
 
     <script>
-      //REFERENCE @EUGENE
+      //@reference https://moodle2025.ncirl.ie/course/section.php?id=36540
       //This is the logic behind the buttons
       const deleteBtnElement = document.getElementById("deleteBtn");
       const viewGameDivElement = document.getElementById("viewGame");
