--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,11 @@
+<!--
+ *  add.ejs
+ *   
+ *  Date: 11/12/2025 
+ *
+ * @author Martin Olaru, x24528929
+ *@reference https://moodle2025.ncirl.ie/course/section.php?id=36538
+-->
 <!DOCTYPE html>
 <html lang="en">
   <!--Include the head-->
@@ -15,7 +23,7 @@
             <div class="card-body mx-auto">
               <h1 class="title">Welcome to my GameLibrary App website!</h1>
               <h3 class="title">My Games added so far...</h3>
-              <!--This is to display each game in the database, reference @eugene slides-->
+              <!--This is to display each game in the database, reference  *@reference https://moodle2025.ncirl.ie/course/section.php?id=36538-->
               <% if (games.length) { games.forEach(game=> { %>
               <a class="mainGame" href="/game/<%=game._id %>">
                 <h2><%= game.title%></h2>
