--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,11 @@
+<!--
+ *  footer.ejs
+ *   
+ *  Date: 11/12/2025 
+ *
+ * @author Martin Olaru, x24528929
+ *
+-->
 <!--Footer for end of each page-->
 <footer>
   <hr />
