--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,3 +1,11 @@
+<!--
+ *  head.ejs
+ *   
+ *  Date: 11/12/2025 
+ *
+ * @author Martin Olaru, x24528929
+ *
+-->
 <!--Head section containing links to bootstrap and chart.js and style sheet each page-->
 <head>
   <meta charset="UTF-8" />
