--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,3 +1,11 @@
+<!--
+ *  nav.ejs
+ *   
+ *  Date: 11/12/2025 
+ *
+ * @author Martin Olaru, x24528929
+ *
+-->
 <!-- this is to create a navigation bar at the top of the page -->
 <ul class="nav">
   <li class="nav-item">
