--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,12 @@
+/*
+ *  style.css
+ *   
+ *  Date: 11/12/2025 
+ *
+ * @author Martin Olaru, x24528929
+ *
+ */
+
 /* to change the background color */
 body {
   background-color: #dbeaff !important;
