--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,3 +1,11 @@
+<!--
+ *  404.ejs
+ *   
+ *  Date: 11/12/2025 
+ *
+ * @author Martin Olaru, x24528929
+ *
+-->
 <!--404 page incase they enter wrong route-->
 <!DOCTYPE html>
 <html lang="en">
