--- a/views/add.ejs
+++ b/views/add.ejs
@@ -1,3 +1,11 @@
+<!--
+ *  add.ejs
+ *   
+ *  Date: 11/12/2025 
+ *
+ * @author Martin Olaru, x24528929
+ *@reference https://moodle2025.ncirl.ie/course/section.php?id=36540
+-->
 <!DOCTYPE html>
 <html lang="en">
   <!--Include the head-->
@@ -14,7 +22,7 @@
         <div class="col-8 mx-auto">
           <div class="card">
             <div class="card-body mx-auto text-center">
-              <!--Reference @Eugene Slides-->
+              <!-- *@reference https://moodle2025.ncirl.ie/course/section.php?id=36540-->
               <form action="/" method="POST">
                 <h3 class="title">Add a game to the library!</h3>
                 <label class="addLbl">Title</label><br />
