--- a/views/launchprice.ejs
+++ b/views/launchprice.ejs
@@ -1,3 +1,11 @@
+<!--
+ *  launchPrice.ejs
+ *   
+ *  Date: 11/12/2025 
+ *
+ * @author Martin Olaru, x24528929
+ *
+-->
 <!DOCTYPE html>
 <html lang="en">
   <!--Include the head-->
